horizontal scroll fix for the table component

--- a/src/components/common/Table.module.scss
+++ b/src/components/common/Table.module.scss
@@ -6,7 +6,7 @@
   background-color: $white;
   border-radius: $radius-md;
   border: 1px solid $border-color;
-  overflow: hidden;
+  overflow-y: hidden;
 
   .table {
     width: 100%;
